# pytellum

./: .gitignore  Dockerfile  README.md  build.sh  docker-compose.yaml  pyproject.toml  requirements.txt  sample.env
pytellum/: base.py  config.py  main.py  utils.py
